# EletroSim

./: README.md
frontend/: Cargo.toml
frontend/src/: main.rs
src-tauri/: Cargo.toml  tauri.conf.json
