[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo = "0.8.0"
gloo-events = "0.1.2"
js-sys = "0.3.61"
log = "0.4.17"
stdweb = "0.4.20"
wasm-bindgen = "0.2.84"
wasm-logger = "0.2.0"
web-sys = "0.3.61"
yew = { version = "0.20", features = ["csr"] }
